sneaker.html及び必要ファイルを追加しました

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <ul>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site1.ken2ken24.com/">
+                                <a href="./Sneaker/sneaker.html">
                                     <img src="img/sneaker.png">
                                     <figcaption>
                                         <div class="fig-inner">
