Flowerフォルダとindex.htmlのリンクの変更

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site3.ken2ken24.com/">
+                                <a href="./Flower/flower.html">
                                     <img src="img/ohana.png">
                                     <figcaption>
                                         <div class="fig-inner">
