Blogフォルダの追加とコードのネスト調整

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <img src="img/ohana.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>スクロールイベントのあるWebサイトの模写</h3>
+                                            <h3>スクロールイベントのあるWebサイト</h3>
                                             <p>ギャラリーサイト/スクロールイベント</p>
                                             <p>制作期間:3日</p>
                                         </div>
