Buildingフォルダの追加とリンクの変更

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://www.wp2.ken2ken24.com/wp2/">
+                                <a href="./Blog/blog.html">
                                     <img src="img/works.png">
                                     <figcaption>
                                         <div class="fig-inner">
@@ -94,7 +94,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site6.ken2ken24.com/">
+                                <a href="./Buliding/building.html">
                                     <img src="img/kensetu.png">
                                     <figcaption>
                                         <div class="fig-inner">
@@ -106,7 +106,6 @@
                                 </a>
                             </figure>
                         </li>
-                     
                         <li class="work-item animated-li">
                             <figure>
                                 <a href="https://site8.ken2ken24.com/">
