bathフォルダの追加とリンクの更新

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site8.ken2ken24.com/">
+                                <a href="./Bath/bath.html">
                                     <img src="img/kunaipu.png">
                                     <figcaption>
                                         <div class="fig-inner">
