Ryokanフォルダの追加とリンクの更新

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <img src="img/kensetu.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>建設会社のWebサイトの模写</h3>
+                                            <h3>建設会社のWebサイト</h3>
                                             <p>シンプルな構成で見やすい配置</p>
                                             <p>制作期間:2日</p>
                                         </div>
@@ -112,7 +112,7 @@
                                     <img src="img/kunaipu.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>一般的なLPサイトの模写</h3>
+                                            <h3>一般的なLPサイト</h3>
                                             <p>黄色がベースの爽やかなサイト</p>
                                             <p>制作期間:2日</p>
                                         </div>
@@ -122,7 +122,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://www.wp1.ken2ken24.com/wp1/">
+                                <a href="./Engress/engress.html">
                                     <img src="img/Engress.png">
                                     <figcaption>
                                         <div class="fig-inner">
@@ -137,11 +137,11 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://ken2ken24.conohawing.com/">
+                                <a href="./Ryokan/ryokan.html">
                                     <img src="img/kadan.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>旅館のWebサイト　模写</h3>
+                                            <h3>旅館のWebサイト</h3>
                                             <p>モーダル/マップ埋め込みetc</p>
                                             <p>制作期間:15日程</p>
                                         </div>
@@ -155,7 +155,7 @@
                                     <img src="img/sousaku.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>和風なWebサイト模写</h3>
+                                            <h3>和風なWebサイト</h3>
                                             <p>縦書きレイアウト</p>
                                             <p>制作期間:1日</p>
                                         </div>
@@ -169,7 +169,7 @@
                                     <img src="img/your.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>モダンなデザインのWebサイトの模写</h3>
+                                            <h3>モダンなデザインのWebサイト</h3>
                                             <p>アコーディオン、フェードインetc</p>
                                             <p>制作期間:12日程</p>
                                         </div>
@@ -183,7 +183,7 @@
                                     <img src="img/airbnb.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>動画付きWebサイトの模写</h3>
+                                            <h3>動画付きWebサイト</h3>
                                             <p>ビデオ再生ボタン</p>
                                             <p>制作期間:4日</p>
                                         </div>
@@ -197,7 +197,7 @@
                                     <img src="img/clinick.png">
                                     <figcaption>
                                         <div class="fig-inner">
-                                            <h3>一般的な病院サイトの模写</h3>
+                                            <h3>一般的な病院サイト</h3>
                                             <p>ブログ型</p>
                                             <p>制作期間:2日</p>
                                         </div>
