Okasiフォルダの追加とリンクの更新

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site5.ken2ken24.com/">
+                                <a href="./Okasi/okasi.html">
                                     <img src="img/sousaku.png">
                                     <figcaption>
                                         <div class="fig-inner">
