Yourフォルダの追加とリンクの更新

--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site2.ken2ken24.com/">
+                                <a href="/Your/your.html">
                                     <img src="img/your.png">
                                     <figcaption>
                                         <div class="fig-inner">
                                             <h3>モダンなデザインのWebサイト</h3>
-                                            <p>アコーディオン、フェードインetc</p>
+                                            <p>アコーディオン、フェードイン</p>
                                             <p>制作期間:12日程</p>
                                         </div>
                                     </figcaption>
