Hospitalフォルダの追加とリンクの更新

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </li>
                         <li class="work-item animated-li">
                             <figure>
-                                <a href="https://site4.ken2ken24.com/">
+                                <a href="./Hospital/hospital.html">
                                     <img src="img/clinick.png">
                                     <figcaption>
                                         <div class="fig-inner">
