--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>ken's portfolio</title>
+        <title>N-i-ke's portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/favicon.png">
@@ -36,7 +36,7 @@
                 <span></span>
                 <span></span>
             </div>
-            <h1 class="site-title">ken's Portfolio</h1>
+            <h1 class="site-title">N-i-ke's Portfolio</h1>
             <h4 class="sub-site-title">クリエイティブなWeb制作をお届けします。</h4>
             <div id="mask"></div>
         </header>
@@ -218,16 +218,16 @@
                 <div class="profile">
                     <div class="icon-wrapper">
                         <h3 class="name animated">
-                            <p class="name-main">西　健吾</p>
-                            <p class="name-sub">Nishi Kengo</p>
+                            <p class="name-main">N-i-ke</p>
+                            <p class="name-sub">N-i-ke</p>
                         </h3>
                     </div>
                     <div class="about-wrapper">
                         <h4 class="animated"><i class="fas fa-chess-king"></i> Personal History</h4>
                         <p class="animated">
                             <i class="fas fa-dot-circle"></i> 2002年1月生まれ。東京都出身。<br>
-                            <i class="fas fa-dot-circle"></i> 東京育ち、現在は千葉県在住<br>
-                            <i class="fas fa-dot-circle"></i>︎ 2021年2月からWeb制作独学開始<br>
+                            <i class="fas fa-dot-circle"></i> 東京育ち、東京在住<br>
+                            <i class="fas fa-dot-circle"></i>︎ 趣味はテニスとハシゴ酒です<br>
                         </p>
                         <h4 class="animated"><i class="fas fa-chess-queen"></i> Mind</h4>
                         <p class="animated">
@@ -254,7 +254,7 @@
                     </div>
                     <div class="skill-item animated-div">
                         <i class="fab fa-js-square"></i>
-                        <h4>Java Script</h4>
+                        <h4>JavaScript</h4>
                     </div>
                     <div class="skill-item animated-div">
                         <i class="fab fa-php"></i>
@@ -319,13 +319,52 @@
         </main>
         <!-- footer -->
         <footer id="footer">
-            <p class="footer">&copy;2021 SampleSite All Right Reserved.</p>
+            <p class="footer">&copy;2023 SampleSite All Right Reserved.</p>
         </footer>
         <!-- loading画面の表示 -->
         <div class="start">
-            <h1 class="site-title"><span class="1">K</span><span class="2">e</span><span class="3">n'</span><span class="4">s</span><span class="5"></span><span class="6"></span><span class="7"></span>
-            <span class="8">P</span><span class="9">o</span><span class="10">r</span><span class="11">t</span><span class="12">f</span><span class="13">o</span><span class="14">l</span><span class="15">i</span><span class="16">o</span></h1>
-            <h4 class="sub-site-title"><span class="17">ク</span><span class="18">リ</span><span class="19">エ</span><span class="20">イ</span><span class="21">テ</span><span class="22">ィ</span><span class="23">ブ</span><span class="24">な</span><span class="25">W</span><span class="26">e</span><span class="27">b</span><span class="28">制</span><span class="29">作</span><span class="30">を</span><span class="31">お</span><span class="32">届</span><span class="33">け</span><span class="34">し</span><span class="35">ま</span><span class="36">す</span><span class="37">。</span></h4>
+            <h1 class="site-title">
+                <span class="1">N</span>
+                <span class="2">-</span>
+                <span class="3">i</span>
+                <span class="4">-</span>
+                <span class="5">k</span>
+                <span class="6">e</span>
+                <span class="7">'s</span>
+                <span class="8"></span>
+                <span class="8">P</span>
+                <span class="9">o</span>
+                <span class="10">r</span>
+                <span class="11">t</span>
+                <span class="12">f</span>
+                <span class="13">o</span>
+                <span class="14">l</span>
+                <span class="15">i</span>
+                <span class="16">o</span>
+            </h1>
+            <h4 class="sub-site-title">
+                <span class="17">ク</span>
+                <span class="18">リ</span>
+                <span class="19">エ</span>
+                <span class="20">イ</span>
+                <span class="21">テ</span>
+                <span class="22">ィ</span>
+                <span class="23">ブ</span>
+                <span class="24">な</span>
+                <span class="25">W</span>
+                <span class="26">e</span>
+                <span class="27">b</span>
+                <span class="28">制</span>
+                <span class="29">作</span>
+                <span class="30">を</span>
+                <span class="31">お</span>
+                <span class="32">届</span>
+                <span class="33">け</span>
+                <span class="34">し</span>
+                <span class="35">ま</span>
+                <span class="36">す</span>
+                <span class="37">。</span>
+            </h4>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
