--- a/selfweb/public/index.html
+++ b/selfweb/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- reset.cssの読み込み -->
+    <!-- jqueryCDNの読み込み -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <title>React App</title>
+    <title>N-i-ke</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,7 +42,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <!-- jQueryアニメーションの実装 -->
+    <!-- jQueryアニメーション-->
     <script>
       $(function () {
       $(".menu-btn").on("click", function () {
@@ -52,19 +52,19 @@
         $("#header").removeClass("open");
       }
       });
-  $("#mask").on("click", function () {
-    $("#header").removeClass("open");
+     $("#mask").on("click", function () {
+      $("#header").removeClass("open");
+      });
+      });
+  $(".animated").waypoint({
+    handler(direction) {
+      if (direction === "down") {
+        $(this.element).addClass("fadeInUp");
+        // this.destroy();
+      }
+    },
+    offset: "60%",
   });
-});
-$(".animated").waypoint({
-  handler(direction) {
-    if (direction === "down") {
-      $(this.element).addClass("fadeInUp");
-      // this.destroy();
-    }
-  },
-  offset: "60%",
-});
 //windowがscrollされた時のイベント
 $(window).scroll(function () {
   var scrollTop = $(this).scrollTop();
