--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>N-i-ke's portfolio</title>
+        <title>NIK portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/favicon.png">
@@ -36,7 +36,7 @@
                 <span></span>
                 <span></span>
             </div>
-            <h1 class="site-title">N-i-ke's Portfolio</h1>
+            <h1 class="site-title">NIK Portfolio</h1>
             <h4 class="sub-site-title">クリエイティブなWeb制作をお届けします。</h4>
             <div id="mask"></div>
         </header>
@@ -218,8 +218,8 @@
                 <div class="profile">
                     <div class="icon-wrapper">
                         <h3 class="name animated">
-                            <p class="name-main">N-i-ke</p>
-                            <p class="name-sub">N-i-ke</p>
+                            <p class="name-main">NIK</p>
+                            <p class="name-sub">NIK</p>
                         </h3>
                     </div>
                     <div class="about-wrapper">
@@ -227,7 +227,6 @@
                         <p class="animated">
                             <i class="fas fa-dot-circle"></i> 2002年1月生まれ。東京都出身。<br>
                             <i class="fas fa-dot-circle"></i> 東京育ち、東京在住<br>
-                            <i class="fas fa-dot-circle"></i>︎ 趣味はテニスとハシゴ酒です<br>
                         </p>
                         <h4 class="animated"><i class="fas fa-chess-queen"></i> Mind</h4>
                         <p class="animated">
@@ -325,12 +324,12 @@
         <div class="start">
             <h1 class="site-title">
                 <span class="1">N</span>
-                <span class="2">-</span>
-                <span class="3">i</span>
-                <span class="4">-</span>
-                <span class="5">k</span>
-                <span class="6">e</span>
-                <span class="7">'s</span>
+                <span class="2">I</span>
+                <span class="3">K</span>
+                <span class="4"></span>
+                <span class="5"></span>
+                <span class="6"></span>
+                <span class="7"> </span>
                 <span class="8"></span>
                 <span class="8">P</span>
                 <span class="9">o</span>
